fix bug with name && align

--- a/style/style.sass
+++ b/style/style.sass
@@ -1,3 +1,4 @@
+//sass --watch style.sass:style.css
 *
   margin: 0
   padding: 0
@@ -130,9 +131,9 @@ main
 
   &__player-name
     flex-grow: 1
-    font-size: 1rem
+    font-size: 2rem
     padding: 5px
-    text-align: left
+    text-align: center
     align-self: center
 
 .life
